--- a/minitwit/templates/layout.html
+++ b/minitwit/templates/layout.html
@@ -7,11 +7,12 @@
   {% if g.user %}
     <a href="{{ url_for('timeline') }}">my timeline</a> |
     <a href="{{ url_for('public_timeline') }}">public timeline</a> |
-    <a href="{{ url_for('logout') }}">sign out [{{ g.user.username }}]</a>
+    <a href="{{ url_for('account') }}">account</a> |
+    <a href="{{ url_for('logout') }}">logout [{{ g.user.username }}]</a>
   {% else %}
     <a href="{{ url_for('public_timeline') }}">public timeline</a> |
-    <a href="{{ url_for('register') }}">sign up</a> |
-    <a href="{{ url_for('login') }}">sign in</a>
+    <a href="{{ url_for('register') }}">register</a> |
+    <a href="{{ url_for('login') }}">login</a>
   {% endif %}
   </div>
   {% with flashes = get_flashed_messages() %}
