--- a/minitwit/templates/login.html
+++ b/minitwit/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
-{% block title %}Sign In{% endblock %}
+{% block title %}Log In{% endblock %}
 {% block body %}
-  <h2>Sign In</h2>
+  <h2>Log In</h2>
   {% if error %}<div class="error"><strong>Error:</strong> {{ error }}</div>{% endif %}
   <form action="" method="post">
     <dl>
@@ -10,7 +10,6 @@
       <dt>Password:
       <dd><input type="password" name="password" size="30">
     </dl>
-    <div class="actions"><input type="submit" value="Sign In"></div>
+    <div class="actions"><input type="submit" value="Log In"></div>
   </form>
 {% endblock %}
-
